<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>pixels</artifactId>
        <groupId>io.pixelsdb</groupId>
        <version>0.2.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>pixels-retina</artifactId>

    <properties>
        <maven.compiler.target>1.8</maven.compiler.target>
        <maven.compiler.source>1.8</maven.compiler.source>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.pixelsdb</groupId>
            <artifactId>pixels-core</artifactId>
        </dependency>
        <dependency>
            <groupId>io.pixelsdb</groupId>
            <artifactId>pixels-common</artifactId>
        </dependency>
        <dependency>
            <groupId>io.pixelsdb</groupId>
            <artifactId>pixels-storage-localfs</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.pixelsdb</groupId>
            <artifactId>pixels-storage-s3</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.pixelsdb</groupId>
            <artifactId>pixels-index-main-sqlite</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.pixelsdb</groupId>
            <artifactId>pixels-index-rocksdb</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.pixelsdb</groupId>
            <artifactId>pixels-index-rockset</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.pixelsdb</groupId>
            <artifactId>pixels-index-memory</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.pixelsdb</groupId>
            <artifactId>pixels-index-mapdb</artifactId>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna</artifactId>
        </dependency>

        <!-- grpc -->
        <dependency>
            <groupId>io.grpc</groupId>
            <artifactId>grpc-netty-shaded</artifactId>
        </dependency>
        <dependency>
            <groupId>io.grpc</groupId>
            <artifactId>grpc-protobuf</artifactId>
        </dependency>
        <dependency>
            <groupId>io.grpc</groupId>
            <artifactId>grpc-protobuf-lite</artifactId>
        </dependency>
        <dependency>
            <groupId>io.grpc</groupId>
            <artifactId>grpc-stub</artifactId>
        </dependency>

        <dependency>
            <groupId>io.etcd</groupId>
            <artifactId>jetcd-core</artifactId>
        </dependency>

        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-all</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>io.grpc</groupId>
            <artifactId>grpc-netty</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <!-- this is only for third-party libs that use slf4j -->
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <!-- this is only for third-party libs that use log4j-1 -->
            <groupId>org.slf4j</groupId>
            <artifactId>log4j-over-slf4j</artifactId>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.junit.vintage</groupId>
            <artifactId>junit-vintage-engine</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>${maven.plugin.deploy.version}</version>
                <configuration>
                    <altDeploymentRepository>
                        local.mvn.repo::default::file://${project.parent.basedir}/mvn
                    </altDeploymentRepository>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven.plugin.source.version}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>${maven.plugin.antrun.version}</version>
                <executions>
                    <execution>
                        <id>compile-cpp</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target xmlns:if="ant:if">
                                <!-- Load only if pixels.properties exists, and only when the configuration file contains the retina tile visibility capacity setting. -->
                                <available file="${env.PIXELS_HOME}/etc/pixels.properties" property="pixels.properties.exists"/>
                                <loadproperties srcFile="${env.PIXELS_HOME}/etc/pixels.properties" if:set="pixels.properties.exists"/>
                                <exec executable="cmake" failonerror="true" outputproperty="cmake.output" errorproperty="cmake.error">
                                    <arg line="-B ${project.basedir}/../cpp/pixels-retina/build"/>
                                    <arg line="-S ${project.basedir}/../cpp/pixels-retina"/>
                                    <arg line="-DRETINA_CAPACITY=${retina.tile.visibility.capacity}" if:set="retina.tile.visibility.capacity"/>
                                </exec>
                                <exec executable="make" dir="${project.basedir}/../cpp/pixels-retina/build" failonerror="true" outputproperty="make.output" errorproperty="make.error">
                                    <arg value="install"/>
                                </exec>
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>